// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /token/inject adds token to environment of CircleCI project 1`] = `"Successfully created token (ending with xxxFOO) and injected it to CircleCI build (test/test)"`;

exports[`GET /token/inject fails if owner and project is missing 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "query",
      "msg": "Owner is required",
      "param": "owner",
    },
    Object {
      "location": "query",
      "msg": "Project identifier is required",
      "param": "project",
    },
  ],
}
`;

exports[`GET /token/inject fails if owner is missing 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "query",
      "msg": "Owner is required",
      "param": "owner",
    },
  ],
}
`;

exports[`GET /token/inject fails if project is missing 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "query",
      "msg": "Project identifier is required",
      "param": "project",
    },
  ],
}
`;
